Test "remove connected object" is added.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -54,5 +54,8 @@ if (WITH_TESTS_CORE)
     
     add_library (remove_event SHARED remove_event.cpp)
     add_test (remove_event_test tester --iface TESTINGUI_REMOVE_EVENT)
+    
+    add_library (remove_connected_object SHARED remove_connected_object.cpp)
+    add_test (remove_connected_object_test tester --iface TESTINGUI_REMOVE_CONNECTED_OBJECT)
 
 endif (WITH_TESTS_CORE)
