--- a/fixtures/database.yaml
+++ b/fixtures/database.yaml
@@ -1,53 +1,106 @@
 - Object: Person
   ID: 0
   VCard:
-    name: Harry
     surname: Potta
-    sex: MALE
     birthday: 19283740
+    sex: MALE
+    name: Harry
   groups:
     - 4
     - 3
-- Object: Person
-  ID: 1
+- ID: 1
   VCard:
-    name: John
-    surname: Connor
     sex: MALE
+    surname: Connor
+    name: John
     birthday: 1100220033
   groups:
     - 2
-- Object: Group
-  ID: 2
+  Object: Person
+- ID: 2
+  children_groups:
+    - 3
+    - 4
+  Object: Group
   VCard:
     name: Miles Davis band
   people:
     - 1
   parent_groups:
     - 4
+- people:
+    - 0
+  VCard:
+    name: Suppa-pa... Truppa-pa...
+  ID: 3
   children_groups:
     - 3
     - 4
+  Object: Group
+  parent_groups:
+    - 2
+    - 3
+- people:
+    - 0
+  ID: 4
+  children_groups:
+    - 2
+  parent_groups:
+    - 2
+    - 3
+  Object: Group
+  VCard:
+    name: Abba
+- VCard:
+    name: Harry
+    birthday: 19283740
+    surname: Potta
+    sex: MALE
+  Object: Person
+  groups:
+    - 9
+    - 8
+  ID: 5
+- Object: Person
+  groups:
+    - 7
+  ID: 6
+  VCard:
+    sex: MALE
+    birthday: 1100220033
+    name: John
+    surname: Connor
+- ID: 7
+  VCard:
+    name: Miles Davis band
+  Object: Group
+  people:
+    - 6
+  parent_groups:
+    - 9
+  children_groups:
+    - 8
+    - 9
 - Object: Group
-  ID: 3
+  ID: 8
   VCard:
     name: Suppa-pa... Truppa-pa...
   people:
-    - 0
+    - 5
   parent_groups:
-    - 2
-    - 3
+    - 7
+    - 8
   children_groups:
-    - 3
-    - 4
+    - 8
+    - 9
 - Object: Group
-  ID: 4
+  ID: 9
   VCard:
     name: Abba
   people:
-    - 0
+    - 5
   parent_groups:
-    - 2
-    - 3
+    - 7
+    - 8
   children_groups:
-    - 2
+    - 7
