--- a/fixtures/database.yaml
+++ b/fixtures/database.yaml
@@ -1,128 +1,128 @@
-- Object: Person
-  VCard:
-    surname: Potta
-    name: Harry
-    birthday: 19283740
+- VCard:
     sex: MALE
+    surname: Potta
+    birthday: 19283740
+    name: Harry
+  Object: Person
   ID: 0
   groups:
     - 4
     - 3
-- Object: Person
-  groups:
+- groups:
     - 2
-  ID: 1
   VCard:
     birthday: 1100220033
     surname: Connor
     sex: MALE
     name: John
-- VCard:
+  ID: 1
+  Object: Person
+- ID: 2
+  VCard:
     name: Miles Davis band
+  children_groups:
+    - 3
+    - 4
+  people:
+    - 1
   parent_groups:
     - 4
+  Object: Group
+- parent_groups:
+    - 3
+    - 2
+  ID: 3
   children_groups:
     - 3
     - 4
   Object: Group
-  people:
-    - 1
-  ID: 2
-- ID: 3
   VCard:
     name: Suppa-pa... Truppa-pa...
   people:
     - 0
-  Object: Group
-  children_groups:
+- parent_groups:
     - 3
-    - 4
-  parent_groups:
     - 2
-    - 3
-- ID: 4
+  people:
+    - 0
+  ID: 4
   VCard:
     name: Abba
   children_groups:
     - 2
-  people:
-    - 0
-  parent_groups:
-    - 2
-    - 3
   Object: Group
-- groups:
-    - 9
-    - 8
-  Object: Person
+- Object: Person
+  ID: 5
   VCard:
     surname: Potta
     sex: MALE
     birthday: 19283740
     name: Harry
-  ID: 5
-- VCard:
-    sex: MALE
-    birthday: 1100220033
-    name: John
+  groups:
+    - 9
+    - 8
+- ID: 6
+  VCard:
     surname: Connor
-  ID: 6
-  Object: Person
+    sex: MALE
+    name: John
+    birthday: 1100220033
   groups:
     - 7
-- ID: 7
+  Object: Person
+- children_groups:
+    - 8
+    - 9
+  ID: 7
+  Object: Group
   VCard:
     name: Miles Davis band
-  Object: Group
   people:
     - 6
   parent_groups:
     - 9
-  children_groups:
-    - 8
-    - 9
 - ID: 8
+  VCard:
+    name: Suppa-pa... Truppa-pa...
   people:
     - 5
+  Object: Group
   parent_groups:
     - 7
     - 8
   children_groups:
     - 8
     - 9
-  Object: Group
-  VCard:
-    name: Suppa-pa... Truppa-pa...
 - parent_groups:
     - 7
     - 8
   children_groups:
     - 7
   ID: 9
-  Object: Group
   VCard:
     name: Abba
   people:
     - 5
-- ID: 10
-  VCard:
-    name: Harry
-    surname: Potta
-    sex: MALE
-    birthday: 19283740
-  groups:
+  Object: Group
+- groups:
     - 14
     - 13
   Object: Person
-- VCard:
+  ID: 10
+  VCard:
+    surname: Potta
+    sex: MALE
+    birthday: 19283740
+    name: Harry
+- ID: 11
+  VCard:
     name: John
     surname: Connor
     sex: MALE
     birthday: 1100220033
-  Object: Person
-  ID: 11
   groups:
     - 12
+  Object: Person
 - Object: Group
   ID: 12
   VCard:
