--- a/src/modules/ui/ncurses/CMakeLists.txt
+++ b/src/modules/ui/ncurses/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
-add_library(ncursesui SHARED main.cpp)
-target_link_libraries(ncursesui ncurses)
+if (WITH_NCURSES)
+    add_library(ncursesui SHARED main.cpp)
+    target_link_libraries(ncursesui ncurses)
+endif (WITH_NCURSES)
 
