Renaming WITH_YAML as WITH_STORAGE_TEXTFILE, WITH_SQLITE as WITH_STORAGE_SQLITE.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,23 @@ if ("${PROJECT_BINARY_DIR}" STREQUAL "${PROJECT_SOURCE_DIR}")
     message (SEND_ERROR "Building in sources not allowed.")
 endif ("${PROJECT_BINARY_DIR}" STREQUAL "${PROJECT_SOURCE_DIR}")
 
-option(WITH_SQLITE "Build with SQLite support." Y)
+# UI Options
 option(WITH_DUMMYUI "Build with DummyUI support." Y)
 option(WITH_CLI "Build with CLI support." Y)
-option(WITH_YAML "Build with YAML support." Y)
+option(WITH_NCURSES "Build ncurses frontend." N)
+
+# Storage Options
+option(WITH_STORAGE_TEXTFILE "Build with storage features: YAML-formated plain text files as database." Y)
+option(WITH_STORAGE_SQLITE "Build with storage features: SQLite database." Y)
+
+# Unit Test Options
 option(WITH_TESTS_CXX11 "Check if the compiler handles the C++11 stuff right." Y)
 option(WITH_TESTS_CORE "Build with Core tests." N)
 option(WITH_EXT_PYTHON_CLI "Экспериментальные питоновские биндинги к CLI. (лучше просто пройди мимо)" N)
-option(WITH_NCURSES "Build ncurses frontend." N)
 
+# Algorithm Collections
 option(WITH_REPEAT "Build repeat events algorithm." N)
+
 
 if (WITH_TESTS_CXX11)
     include (cmake/c++11/CheckCXX11Features.cmake)
@@ -30,10 +37,18 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
 
 find_package (Boost REQUIRED)
 
-if (WITH_YAML)
-    add_definitions(-DWITH_YAML)
+if (WITH_NCURSES)
+    find_package (ncurses REQUIRED)
+endif (WITH_NCURSES)
+
+if (WITH_STORAGE_TEXTFILE)
+    add_definitions(-DWITH_STORAGE_TEXTFILE)
     find_package (yaml-cpp REQUIRED)
-endif (WITH_YAML)
+endif (WITH_STORAGE_TEXTFILE)
+
+if (WITH_STORAGE_SQLITE)
+    find_package (sqlite REQUIRED)
+endif (WITH_STORAGE_SQLITE)
 
 if (WITH_TESTS_CORE)
    add_definitions(-DWITH_TESTS_CORE)
@@ -43,13 +58,6 @@ if (WITH_EXT_PYTHON_CLI)
     add_definitions(-DWITH_EXT_PYTHON_CLI)
 endif(WITH_EXT_PYTHON_CLI)
 
-if (WITH_SQLITE)
-    find_package (sqlite REQUIRED)
-endif (WITH_SQLITE)
-
-if (WITH_NCURSES)
-    find_package (ncurses REQUIRED)
-endif (WITH_NCURSES)
 
 include_directories ("${Boost_INCLUDE_DIRS}")
 include_directories ("${PROJECT_SOURCE_DIR}/src/include")
