--- a/src/modules/ui/CMakeLists.txt
+++ b/src/modules/ui/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required (VERSION 2.8.3)
 
 if (WITH_DUMMYUI)
-    if(NOT WITH_YAML)
+    if(NOT WITH_STORAGE_TEXTFILE)
         message("опция сборки YAML отключена, часть функционала не будет использована в DummyUI")
-    endif(NOT WITH_YAML)
+    endif(NOT WITH_STORAGE_TEXTFILE)
     if(NOT WITH_TESTS_CORE)
         message("опция тестирвания функционала ядра системы отключена, часть функционала не будет использована в DummyUI")
     endif(NOT WITH_TESTS_CORE)
