--- a/src/modules/algorithms/CMakeLists.txt
+++ b/src/modules/algorithms/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_library (repeat SHARED repeat.cpp)
-target_link_libraries (repeat core)
-
+if (WITH_ALG_REPEAT)
+    add_library (repeat SHARED repeat.cpp)
+    target_link_libraries (repeat core)
+endif (WITH_ALG_REPEAT)
