Lua interpretator is included into Core::AbstractUI

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library (core SHARED person.cpp abstractgroup.cpp group.cpp event.cpp
             object.cpp abstractui.cpp module.cpp abstractstorage.cpp utils.cpp
             algorithm.cpp)
 
-target_link_libraries (core dl ${Boost_LIBRARIES})
+target_link_libraries (core dl ${Boost_LIBRARIES} lua)
