Old algorithms are removed

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
 add_library (core SHARED person.cpp abstractgroup.cpp group.cpp event.cpp
-            object.cpp abstractui.cpp module.cpp abstractstorage.cpp utils.cpp
-            algorithm.cpp)
+            object.cpp abstractui.cpp module.cpp abstractstorage.cpp utils.cpp)
 
 target_link_libraries (core dl ${Boost_LIBRARIES} lua)
