--- a/src/modules/storage/CMakeLists.txt
+++ b/src/modules/storage/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 2.8.3)
 
 if (WITH_STORAGE_TEXTFILE)
-    add_library (filestorage SHARED filestorage.cpp)
-    target_link_libraries (filestorage yaml-cpp)
+#    add_library (filestorage SHARED filestorage.cpp)
+#    target_link_libraries (filestorage yaml-cpp)
 endif (WITH_STORAGE_TEXTFILE)
 
 if (WITH_STORAGE_SQLITE)
