--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -5,10 +5,12 @@ if (USE_WINDOWS_SPIKE)
 endif (USE_WINDOWS_SPIKE)
 
 add_library (core SHARED person.cpp abstractgroup.cpp group.cpp event.cpp
-            object.cpp abstractui.cpp module.cpp ${WINDOWS_SPIKE_CPP} abstractstorage.cpp utils.cpp)
+            object.cpp abstractui.cpp module.cpp ${WINDOWS_SPIKE_CPP}
+            abstractstorage.cpp utils.cpp config.cpp)
 
 if (NOT USE_WINDOWS_SPIKE)
     target_link_libraries (core dl)
 endif (NOT USE_WINDOWS_SPIKE)
 
-target_link_libraries (core ${Boost_LIBRARIES} lua)
+target_link_libraries (core ${Boost_LIBRARIES} ${LUA_LIBRARY})
+
